--- a/.github/workflows/veracode-sca-scan.yml
+++ b/.github/workflows/veracode-sca-scan.yml
@@ -139,7 +139,7 @@ jobs:
         env:
           SRCCLR_API_TOKEN: ${{ secrets.VERACODE_AGENT_TOKEN }}
           JAVA_OPTS: -Xms2g -Xmx4g
-        uses: veracode/veracode-sca@v2.1.15
+        uses: veracode/veracode-sca@main
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           create-issues: false
