--- a/.github/workflows/veracode-policy-scan.yml
+++ b/.github/workflows/veracode-policy-scan.yml
@@ -78,7 +78,7 @@ jobs:
 
       # run the policy scan action
       - name: Veracode Upload and Scan Action Step
-        uses: veracode/uploadandscan-action@v0.1.9
+        uses: veracode/uploadandscan-action@main
         id: upload_and_scan
         with:
           appname: ${{ inputs.profile_name }}
