--- a/.github/workflows/veracode-iac-secrets-scan.yml
+++ b/.github/workflows/veracode-iac-secrets-scan.yml
@@ -53,7 +53,7 @@ jobs:
           ref: ${{ github.event.client_payload.sha }}
           token: ${{ github.event.client_payload.token }}
       - name: Run Veracode IaC/Secrets Scanning
-        uses: veracode/container_iac_secrets_scanning@v1.0.6
+        uses: veracode/container_iac_secrets_scanning@main
         with:
             vid: ${{ secrets.VERACODE_API_ID }}
             vkey: ${{ secrets.VERACODE_API_KEY }}
